internal/collector/testdata/seed/seed-3/service-basic2.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    lagoon.sh/branch: main
    lagoon.sh/version: v2.7.x
  labels:
    app.kubernetes.io/instance: basic2
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: external
    lagoon.sh/buildType: branch
    lagoon.sh/environment: main
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
    lagoon.sh/service: basic2
    lagoon.sh/service-type: external
    lagoon.sh/template: external-0.1.0
  name: basic2
spec:
  externalName: basic.other-project-main.svc.cluster.local
  type: ExternalName
status:
  loadBalancer: {}
